// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editors/ArrayEditor Inline 1`] = `
<DocumentFragment>
  <ul>
    <li>
      Laptop
    </li>
    <li>
      Book
    </li>
    <li>
      Whiskey
    </li>
  </ul>
  <div>
    <div
      class="css-q2mafu-ChildContainer"
    >
      <table>
        <tbody>
          <tr>
            <td>
              <div
                class="css-4cffwv"
              >
                <input
                  class="css-iyqgnx"
                  id="name"
                  name="name"
                  value="Laptop"
                />
              </div>
            </td>
            <td>
              <button
                aria-label="delete row"
                class="css-1obc4w6"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M6.5 1.75a.25.25 0 01.25-.25h2.5a.25.25 0 01.25.25V3h-3V1.75zm4.5 0V3h2.25a.75.75 0 010 1.5H2.75a.75.75 0 010-1.5H5V1.75C5 .784 5.784 0 6.75 0h2.5C10.216 0 11 .784 11 1.75zM4.496 6.675a.75.75 0 10-1.492.15l.66 6.6A1.75 1.75 0 005.405 15h5.19c.9 0 1.652-.681 1.741-1.576l.66-6.6a.75.75 0 00-1.492-.149l-.66 6.6a.25.25 0 01-.249.225h-5.19a.25.25 0 01-.249-.225l-.66-6.6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="css-4cffwv"
              >
                <input
                  class="css-iyqgnx"
                  id="name"
                  name="name"
                  value="Book"
                />
              </div>
            </td>
            <td>
              <button
                aria-label="delete row"
                class="css-1obc4w6"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M6.5 1.75a.25.25 0 01.25-.25h2.5a.25.25 0 01.25.25V3h-3V1.75zm4.5 0V3h2.25a.75.75 0 010 1.5H2.75a.75.75 0 010-1.5H5V1.75C5 .784 5.784 0 6.75 0h2.5C10.216 0 11 .784 11 1.75zM4.496 6.675a.75.75 0 10-1.492.15l.66 6.6A1.75 1.75 0 005.405 15h5.19c.9 0 1.652-.681 1.741-1.576l.66-6.6a.75.75 0 00-1.492-.149l-.66 6.6a.25.25 0 01-.249.225h-5.19a.25.25 0 01-.249-.225l-.66-6.6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="css-4cffwv"
              >
                <input
                  class="css-iyqgnx"
                  id="name"
                  name="name"
                  value="Whiskey"
                />
              </div>
            </td>
            <td>
              <button
                aria-label="delete row"
                class="css-1obc4w6"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M6.5 1.75a.25.25 0 01.25-.25h2.5a.25.25 0 01.25.25V3h-3V1.75zm4.5 0V3h2.25a.75.75 0 010 1.5H2.75a.75.75 0 010-1.5H5V1.75C5 .784 5.784 0 6.75 0h2.5C10.216 0 11 .784 11 1.75zM4.496 6.675a.75.75 0 10-1.492.15l.66 6.6A1.75 1.75 0 005.405 15h5.19c.9 0 1.652-.681 1.741-1.576l.66-6.6a.75.75 0 00-1.492-.149l-.66 6.6a.25.25 0 01-.249.225h-5.19a.25.25 0 01-.249-.225l-.66-6.6z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <button
        aria-label="add new row"
        class="css-9nq87t-EditButton"
      >
        <svg
          aria-hidden="true"
          class="octicon"
          fill="currentColor"
          height="16"
          role="img"
          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 2a.75.75 0 01.75.75v4.5h4.5a.75.75 0 010 1.5h-4.5v4.5a.75.75 0 01-1.5 0v-4.5h-4.5a.75.75 0 010-1.5h4.5v-4.5A.75.75 0 018 2z"
            fill-rule="evenodd"
          />
        </svg>
         Add row
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editors/ArrayEditor Overview 1`] = `
<DocumentFragment>
  <ul>
    <li>
      Laptop
    </li>
    <li>
      Book
    </li>
    <li>
      Whiskey
    </li>
  </ul>
  <div
    class="css-12hibeq"
  >
    <button
      aria-label="edit the properties of the array"
      class="css-vhv7r1"
    >
      edit...
      <div
        class="css-vurnku"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Editors/BooleanEditor Overview 1`] = `
<DocumentFragment>
  <div
    style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 14px; transition: opacity 0.25s; user-select: none;"
  >
    <div
      class="react-switch-bg"
      style="height: 28px; width: 56px; margin: 0px; position: relative; background: rgb(136, 136, 136); border-radius: 14px; cursor: pointer; transition: background 0.25s;"
    >
      <div
        style="height: 28px; width: 30px; position: relative; opacity: 0; pointer-events: none; transition: opacity 0.25s;"
      >
        <svg
          height="100%"
          style="position: absolute; top: 0px;"
          viewBox="-2 -5 17 21"
          width="100%"
        >
          <path
            d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
            fill="#fff"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        style="height: 28px; width: 30px; position: absolute; opacity: 1; right: 0px; top: 0px; pointer-events: none; transition: opacity 0.25s;"
      >
        <svg
          height="100%"
          style="position: absolute; top: 0px;"
          viewBox="-2 -5 14 20"
          width="100%"
        >
          <path
            d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
            fill="#fff"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="react-switch-handle"
      style="height: 26px; width: 26px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(1px); top: 1px; outline: 0; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
    />
    <input
      aria-checked="false"
      id="prop"
      role="switch"
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;

exports[`Editors/ButtonEditor Overview 1`] = `
<DocumentFragment>
  <button
    class="css-vhv7r1"
    name="Check in console"
  >
    Check in console
  </button>
</DocumentFragment>
`;

exports[`Editors/ColorEditor Hsl 1`] = `
<DocumentFragment>
  <div
    class="css-12hibeq"
  >
    <button
      aria-label="edit the selected color"
      class="css-rzf2n6-ColorEditor"
    >
      <div
        class="css-rh3qt1-ColorEditor"
      />
      hsl(213, 50%, 16%)
      <div
        class="css-vurnku"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Editors/ColorEditor Hsla 1`] = `
<DocumentFragment>
  <div
    class="css-12hibeq"
  >
    <button
      aria-label="edit the selected color"
      class="css-rzf2n6-ColorEditor"
    >
      <div
        class="css-1748e51-ColorEditor"
      />
      hsla(213, 50%, 16%, 0.5)
      <div
        class="css-vurnku"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Editors/ColorEditor Overview 1`] = `
<DocumentFragment>
  <div
    class="css-12hibeq"
  >
    <button
      aria-label="edit the selected color"
      class="css-rzf2n6-ColorEditor"
    >
      <div
        class="css-whxk4e-ColorEditor"
      />
      #dedede
      <div
        class="css-vurnku"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Editors/ColorEditor Rgb 1`] = `
<DocumentFragment>
  <div
    class="css-12hibeq"
  >
    <button
      aria-label="edit the selected color"
      class="css-rzf2n6-ColorEditor"
    >
      <div
        class="css-jcbfff-ColorEditor"
      />
      rgb(192, 0, 0)
      <div
        class="css-vurnku"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Editors/ColorEditor Rgba 1`] = `
<DocumentFragment>
  <div
    class="css-12hibeq"
  >
    <button
      aria-label="edit the selected color"
      class="css-rzf2n6-ColorEditor"
    >
      <div
        class="css-1cnoj9w-ColorEditor"
      />
      rgba(0, 192, 0, 0.5)
      <div
        class="css-vurnku"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Editors/Custom Control Overview 1`] = `
<DocumentFragment>
  <input
    id="prop"
    type="checkbox"
  />
</DocumentFragment>
`;

exports[`Editors/DateEditor Only Date Picker 1`] = `
<DocumentFragment>
  <div
    class="css-uliqdc"
  >
    <input
      class="css-1qqniy8"
      id="propdate"
      max="9999-12-31"
      name="propdate"
      type="date"
    />
  </div>
</DocumentFragment>
`;

exports[`Editors/DateEditor Only Time Picker 1`] = `
<DocumentFragment>
  <div
    class="css-uliqdc"
  >
    <input
      class="css-1qqniy8"
      id="proptime"
      name="proptime"
      type="time"
    />
  </div>
</DocumentFragment>
`;

exports[`Editors/DateEditor Overview 1`] = `
<DocumentFragment>
  <div
    class="css-uliqdc"
  >
    <input
      class="css-1qqniy8"
      id="propdate"
      max="9999-12-31"
      name="propdate"
      type="date"
    />
    <input
      class="css-1qqniy8"
      id="proptime"
      name="proptime"
      type="time"
    />
  </div>
</DocumentFragment>
`;

exports[`Editors/FilesEditor Overview 1`] = `
<DocumentFragment>
  <input
    accept="image/*"
    class="css-iyqgnx"
    multiple=""
    name="prop"
    type="file"
  />
  <img
    alt="files editor"
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAQAAAC1+jfqAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QA/4ePzL8AAAAHdElNRQfiARwMCyEWcOFPAAAAP0lEQVQoz8WQMQoAIAwDL/7/z3GwghSp4KDZyiUpBMCYUgd8rehtH16/l3XewgU2KAzapjXBbNFaPS6lDMlKB6OiDv3iAH1OAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDE4LTAxLTI4VDEyOjExOjMzLTA3OjAwlAHQBgAAACV0RVh0ZGF0ZTptb2RpZnkAMjAxOC0wMS0yOFQxMjoxMTozMy0wNzowMOVcaLoAAAAASUVORK5CYII="
  />
</DocumentFragment>
`;

exports[`Editors/NumberEditor Overview 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    max="22"
    min="3"
    name="prop"
    type="number"
    value="10"
  />
</DocumentFragment>
`;

exports[`Editors/NumberEditor Range 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <span
      class="css-vurnku"
    >
      3
    </span>
    <input
      class="css-mo64tj"
      max="22"
      min="3"
      name="prop"
      type="range"
      value="10"
    />
    <span
      class="css-vurnku"
    >
      10 / 22
    </span>
  </div>
</DocumentFragment>
`;

exports[`Editors/NumberEditor Step 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    max="22"
    min="3"
    name="prop"
    step="0.5"
    type="number"
    value="10"
  />
</DocumentFragment>
`;

exports[`Editors/ObjectEditor Edit Label 1`] = `
<DocumentFragment>
  <div
    class="css-12hibeq"
  >
    <button
      aria-label="edit the properties of the object"
      class="css-9nq87t-EditButton"
    >
      Click to edit
    </button>
  </div>
</DocumentFragment>
`;

exports[`Editors/ObjectEditor Inline 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-2qgnud"
    >
      <table>
        <tbody>
          <tr>
            <td>
              border
            </td>
            <td>
              <input
                class="css-iyqgnx"
                id="border"
                name="border"
                value="2px dashed silver"
              />
            </td>
          </tr>
          <tr>
            <td>
              borderRadius
            </td>
            <td>
              <input
                class="css-iyqgnx"
                name="borderRadius"
                type="number"
                value="10"
              />
            </td>
          </tr>
          <tr>
            <td>
              padding
            </td>
            <td>
              <input
                class="css-iyqgnx"
                name="padding"
                type="number"
                value="10"
              />
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editors/ObjectEditor Overview 1`] = `
<DocumentFragment>
  <div
    class="css-12hibeq"
  >
    <button
      aria-label="edit the properties of the object"
      class="css-9nq87t-EditButton"
    >
      edit...
    </button>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Multi Select Numeric 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="1"
      >
        One
      </option>
      <option
        value="2"
      >
        Two
      </option>
      <option
        value="3"
      >
        Three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Multi Select Objects 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
      <option
        value="three"
      >
        Three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Multi Select Simple 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="one"
      >
        one
      </option>
      <option
        value="two"
      >
        two
      </option>
      <option
        value="three"
      >
        three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Numeric 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="1"
      >
        One
      </option>
      <option
        value="2"
      >
        Two
      </option>
      <option
        value="3"
      >
        Three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Numeric Check 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-vurnku"
    >
      <div>
        <input
          checked=""
          id="One-1"
          name="One"
          type="checkbox"
          value="1"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="One-1"
        >
          One
        </label>
      </div>
      <div>
        <input
          id="Two-2"
          name="Two"
          type="checkbox"
          value="2"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Two-2"
        >
          Two
        </label>
      </div>
      <div>
        <input
          id="Three-3"
          name="Three"
          type="checkbox"
          value="3"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Three-3"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Numeric Check Inline 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-14k5yya-CheckboxesWrapper"
    >
      <div>
        <input
          checked=""
          id="One-1"
          name="One"
          type="checkbox"
          value="1"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="One-1"
        >
          One
        </label>
      </div>
      <div>
        <input
          id="Two-2"
          name="Two"
          type="checkbox"
          value="2"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Two-2"
        >
          Two
        </label>
      </div>
      <div>
        <input
          id="Three-3"
          name="Three"
          type="checkbox"
          value="3"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Three-3"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Numeric Radios 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div>
      <input
        checked=""
        id="One-1"
        name="prop"
        type="radio"
        value="1"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="One-1"
      >
        One
      </label>
    </div>
    <div>
      <input
        id="Two-2"
        name="prop"
        type="radio"
        value="2"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Two-2"
      >
        Two
      </label>
    </div>
    <div>
      <input
        id="Three-3"
        name="prop"
        type="radio"
        value="3"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Three-3"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Numeric Radios Inline 1`] = `
<DocumentFragment>
  <div
    class="css-3z2xr6-RadiosWrapper"
  >
    <div>
      <input
        checked=""
        id="One-1"
        name="prop"
        type="radio"
        value="1"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="One-1"
      >
        One
      </label>
    </div>
    <div>
      <input
        id="Two-2"
        name="prop"
        type="radio"
        value="2"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Two-2"
      >
        Two
      </label>
    </div>
    <div>
      <input
        id="Three-3"
        name="prop"
        type="radio"
        value="3"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Three-3"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Objects 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
      <option
        value="three"
      >
        Three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Objects Check 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-vurnku"
    >
      <div>
        <input
          checked=""
          id="One-one"
          name="One"
          type="checkbox"
          value="one"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="One-one"
        >
          One
        </label>
      </div>
      <div>
        <input
          id="Two-two"
          name="Two"
          type="checkbox"
          value="two"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Two-two"
        >
          Two
        </label>
      </div>
      <div>
        <input
          id="Three-three"
          name="Three"
          type="checkbox"
          value="three"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Three-three"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Objects Check Inline 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-14k5yya-CheckboxesWrapper"
    >
      <div>
        <input
          checked=""
          id="One-one"
          name="One"
          type="checkbox"
          value="one"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="One-one"
        >
          One
        </label>
      </div>
      <div>
        <input
          id="Two-two"
          name="Two"
          type="checkbox"
          value="two"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Two-two"
        >
          Two
        </label>
      </div>
      <div>
        <input
          id="Three-three"
          name="Three"
          type="checkbox"
          value="three"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="Three-three"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Objects Radios 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div>
      <input
        checked=""
        id="One-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="One-one"
      >
        One
      </label>
    </div>
    <div>
      <input
        id="Two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Two-two"
      >
        Two
      </label>
    </div>
    <div>
      <input
        id="Three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Three-three"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Objects Radios Inline 1`] = `
<DocumentFragment>
  <div
    class="css-3z2xr6-RadiosWrapper"
  >
    <div>
      <input
        checked=""
        id="One-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="One-one"
      >
        One
      </label>
    </div>
    <div>
      <input
        id="Two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Two-two"
      >
        Two
      </label>
    </div>
    <div>
      <input
        id="Three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="Three-three"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Overview 1`] = `
<DocumentFragment>
  <div
    class="css-4cffwv"
  >
    <select
      class="css-wczjro-OptionsSelect"
    >
      <option
        value="one"
      >
        one
      </option>
      <option
        value="two"
      >
        two
      </option>
      <option
        value="three"
      >
        three
      </option>
    </select>
    <svg
      class="css-1swud1q"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Simple Check 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-vurnku"
    >
      <div>
        <input
          checked=""
          id="one-one"
          name="one"
          type="checkbox"
          value="one"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="one-one"
        >
          one
        </label>
      </div>
      <div>
        <input
          id="two-two"
          name="two"
          type="checkbox"
          value="two"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="two-two"
        >
          two
        </label>
      </div>
      <div>
        <input
          id="three-three"
          name="three"
          type="checkbox"
          value="three"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="three-three"
        >
          three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Simple Check Inline 1`] = `
<DocumentFragment>
  <fieldset
    class="css-xhmj93-CheckboxFieldset"
  >
    <div
      class="css-14k5yya-CheckboxesWrapper"
    >
      <div>
        <input
          checked=""
          id="one-one"
          name="one"
          type="checkbox"
          value="one"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="one-one"
        >
          one
        </label>
      </div>
      <div>
        <input
          id="two-two"
          name="two"
          type="checkbox"
          value="two"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="two-two"
        >
          two
        </label>
      </div>
      <div>
        <input
          id="three-three"
          name="three"
          type="checkbox"
          value="three"
        />
        <label
          class="css-16zyabg-CheckboxLabel"
          for="three-three"
        >
          three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Simple Radios 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div>
      <input
        checked=""
        id="one-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="one-one"
      >
        one
      </label>
    </div>
    <div>
      <input
        id="two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="two-two"
      >
        two
      </label>
    </div>
    <div>
      <input
        id="three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="three-three"
      >
        three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editors/OptionsEditor Simple Radios Inline 1`] = `
<DocumentFragment>
  <div
    class="css-3z2xr6-RadiosWrapper"
  >
    <div>
      <input
        checked=""
        id="one-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="one-one"
      >
        one
      </label>
    </div>
    <div>
      <input
        id="two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="two-two"
      >
        two
      </label>
    </div>
    <div>
      <input
        id="three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="css-hr46x5-RadioLabel"
        for="three-three"
      >
        three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Editors/TextEditor Overview 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    id="prop"
    name="prop"
    value="Hello"
  />
</DocumentFragment>
`;

exports[`Editors/TextEditor Placeholder 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    id="prop"
    name="prop"
    placeholder="Enter some text"
    value=""
  />
</DocumentFragment>
`;

exports[`Editors/TextEditor Text Area 1`] = `
<DocumentFragment>
  <textarea
    class="css-iyqgnx"
    id="prop"
    name="prop"
    placeholder="Enter multiple lines of text"
    rows="4"
  />
</DocumentFragment>
`;
